# window-follower

./: .gitignore  CMakeLists.txt  README.md  copyFiles.bat  copyReleaseFiles.bat  makeDebugDist.bat  makeDist.bat  troubleshooting.md
data/locale/: en-US.ini  sv-SE.ini
data/window-follower/: en-US.ini  sv-SE.ini
src/: capture-internals.h  getHWND.h  monitor.c  properties.c  setup.c  signals.c  tick.c  window-follower.h
src/window-follower/: CMakeLists.txt  capture-internals.h  getHWND.c  getHWND.h  monitor.c  properties.c  setup.c  signals.c  tick.c  window-follower.c  window-follower.h
